# art_plot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE  artplot.pro  csvfile.cpp  csvfile.h  datasource.h  datasourceemul.cpp  datasourceemul.h  itemviewdelegate.cpp  itemviewdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pconstants.h  plotcentralwidget.cpp  plotconfig.cpp  plotconfig.h  plotconfig.ui  plotwidget.cpp  plotwidget.h  plotwindow.cpp  plotwindow.h  plotwindow.ui  qcustomplot.cpp  recvthread.cpp  recvthread.h  recvthreadecal.cpp  recvthreadecal.h  recvthreademul.cpp  recvthreademul.h  test_qcustomplot.pro
scripts/: plot_xy.py
src/: AnonDataArrayHandler.cpp  AnonDataArrayHandler.h  ArbitraryStateDataHandler.cpp  ArbitraryStateDataHandler.h  DualArm.pb.cc  DualArm.pb.h  DualArmDataHandler.cpp  DualArmDataHandler.h  FtSensorDataHandler.cpp  FtSensorDataHandler.h  G1DataHandler.cpp  G1DataHandler.h  LeoQuad.pb.cc  LeoQuad.pb.h  LeoQuadDataHandler.cpp  LeoQuadDataHandler.h  LeoQuadDataSource.cpp  LeoQuadDataSource.h  LeoQuadWheelDataHandler.cpp  LeoQuadWheelDataHandler.h  MotorAgingDataHandler.cpp  MotorAgingDataHandler.h  QuadIP.pb.cc  QuadIP.pb.h  QuadIPDataHandler.cpp  QuadIPDataHandler.h  Woly.pb.cc  Woly.pb.h  WolyDataHandler.cpp  WolyDataHandler.h  artplot.qrc  cmdopts.hpp  config.h.in  csvoptiondlg.cpp  csvoptiondlg.h  csvoptiondlg.ui  datahandler.cpp  datahandler.h  datainfodlg.cpp  datainfodlg.h  (+25 more)
src/proto/: .gitignore  BUILD  DualArm.proto  G1.proto  LeoQuad.proto  MotorAging.proto  QuadIP.proto  Woly.proto
